<resources>
    <string name="app_name">Find BusStop</string>
    <string name="loading_screen">loading_screen</string>
    <string name="rating">Rating: 0.0</string>
    <string name="lat_long">Lat-Long:</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="exit">Exit</string>
    <string name="map_settings">Map Settings</string>
    <string name="view_type">View type:</string>
    <string name="enable_location">Location:</string>
    <string name="mode">Mode:</string>
    <string name="car">Car</string>
    <string name="motor">Motor</string>
    <string name="bicycle">Bicycle</string>
    <string name="walking">Walking</string>
    <string name="traffic">Traffic</string>
    <string name="satellite">Satellite</string>
    <string name="illustration">Illustration</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="list_bus_carriage">Choose a carriage</string>
    <string name="find_busstop">Find BusStop</string>
    <string name="copyright_by">Copyright:</string>
    <string name="telephone">Telephone:</string>
    <string name="email">Email:</string>
    <string name="phan_van_hoai">Phan Van Hoai</string>
    <string name="tel">0985 936 754</string>
    <string name="my_email">phanvanhoaivh4394@gmail.com</string>
    <string name="dut">Danang University of Technology</string>
    <string name="address">Address</string>
    <string name="address_">Address:</string>

    <string name="title.dialog.map_loading">Map Loading …</string>
    <string name="title.dialog.message">Message</string>
    <string name="title.marker.my_location">My Location!</string>
    <string name="title.marker.bus_here">Bus here!</string>
    <string name="button.dialog.ok">OK</string>
    <string name="button.dialog.cancel">Cancel</string>
    <string name="message.dialog.please_wait">Please wait…</string>
    <string name="message.dialog.confirm_quit_app">Do you want to quit app?</string>
    <string name="text.message.check_choose_destination">Please choose your destination!</string>
    <string name="text.message.check_network">No internet, please check your network!</string>
    <string name="text.message.permission_grandted">Permission granted!</string>
    <string name="text.message.permission_denied">Permission denied!</string>
    <string name="text.message.set_latlng">Set your location latitude-longitude: </string>
    <string name="text.message.load_gps_via_network">Load Location via GPS failed! Loading via network…</string>
    <string name="text.message.settings_save">Settings save!</string>
    <string name="text.message.initial_database">Initial database is created!</string>
    <string name="error.message.load_data_fail">Load data failed!</string>
    <string name="error.message.no_location_provider">No location provider enabled!</string>
    <string name="error.message.show_location_error">Show your location error!</string>
    <string name="error.message.error">Error!</string>
    <string name="error.message.load_routes_failed">Routes did not load from API, please check internet and restart app again!</string>
    <string name="error.message.load_direction_failed">Load Direction PlaceStop failed from API, please check internet and restart app again!</string>
    <string name="error.message.request_direction_error">Request directions from Google error!</string>
    <string name="error.message.load_time_remain_failed">Load remain time failed from API, please check internet and restart app again!</string>
    <string name="error.message.error_copying_database">Error copying database!</string>

    <string-array name="carriages_array">
        <item>Tất cả</item>
        <item>Tuyến 1</item>
        <item>Tuyến 2</item>
        <item>Tuyến 3</item>
    </string-array>

    <string-array name="carriages_name_array">
        <item>Tất cả các tuyến xe</item>
        <item>Tuyến 1: Bx Trung tâm Đà Nẵng - Bx Hội An</item>
        <item>Tuyến 2: Kim Liên - Chợ Hàn</item>
        <item>Tuyến 3: Bx Trung tâm Đà Nẵng - Bx Ái Nghĩa</item>
    </string-array>
</resources>
