<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/map_settings"
        android:textColor="#0019fa"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/mode"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/radioGroupMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvMode"
        android:layout_toEndOf="@+id/tvViewType"
        android:layout_marginStart="10dp">

        <RadioButton
            android:id="@+id/rbCar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/car" />

        <RadioButton
            android:id="@+id/rbWalking"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/walking" />

        <RadioButton
            android:id="@+id/rbMotor"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/motor" />

        <RadioButton
            android:id="@+id/rbBicycle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/bicycle" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvViewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvMode"
        android:layout_below="@id/radioGroupMode"
        android:layout_marginTop="33dp"
        android:text="@string/view_type"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/radioGroupType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/radioGroupMode"
        android:layout_alignTop="@id/tvViewType"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbTrafficType"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/traffic" />

        <RadioButton
            android:id="@+id/rbSatellite"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/satellite" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/radioGroupType"
        android:layout_below="@+id/radioGroupType"
        >

        <ImageView
            android:id="@+id/imageViewTraffic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/illustration"
            android:src="@drawable/img_traffic_type" />

        <ImageView
            android:id="@+id/imageViewSatellite"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/imageViewTraffic"
            android:contentDescription="@string/illustration"
            android:src="@drawable/img_satellite_type" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="13dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnOk"
        android:layout_alignBottom="@+id/btnOk"
        android:layout_toEndOf="@+id/btnOk"
        android:layout_marginStart="13dp"
        android:text="@string/cancel" />

</RelativeLayout>