<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_settings"
        android:textColor="#0019fa"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tvEnableLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_location"
        android:textSize="22sp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"/>

    <Switch
        android:id="@+id/swEnableLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tvEnableLocation"
        android:layout_alignTop="@+id/tvEnableLocation"
        android:layout_marginStart="40dp"/>

    <TextView
        android:id="@+id/tvMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode"
        android:textSize="22sp"
        android:layout_alignTop="@+id/radioGroupMode"
        android:layout_alignStart="@+id/tvEnableLocation" />

    <RadioGroup
        android:id="@+id/radioGroupMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swEnableLocation"
        android:layout_alignStart="@+id/swEnableLocation"
        android:layout_marginTop="17dp">

        <RadioButton
            android:id="@+id/rbCar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/car" />

        <RadioButton
            android:id="@+id/rbWalking"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/walking"/>

        <RadioButton
            android:id="@+id/rbMotor"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/motor"/>

            <RadioButton
                android:id="@+id/rbBicycle"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/bicycle" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvViewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_type"
        android:textSize="22sp"
        android:layout_marginTop="33dp"
        android:layout_alignStart="@+id/tvMode"
        android:layout_below="@id/radioGroupMode"/>

    <RadioGroup
        android:id="@+id/radioGroupType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignStart="@id/radioGroupMode"
        android:layout_alignTop="@id/tvViewType">

        <RadioButton
            android:id="@+id/rbTrafficType"
            android:text="@string/traffic"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rbSatellite"
            android:text="@string/satellite"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <ImageView
        android:src="@drawable/img_traffic_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_alignStart="@+id/radioGroupType"
        android:layout_below="@+id/radioGroupType"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView"
        android:contentDescription="@string/illustration" />

    <ImageView
        android:src="@drawable/img_satellite_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/illustration"
        android:id="@+id/imageView2" />

    <Button
        android:id="@+id/btnOk"
        android:text="@string/ok"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="13dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/swEnableLocation" />

    <Button
        android:id="@+id/btnCancel"
        android:text="@string/cancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnOk"
        android:layout_alignBottom="@+id/btnOk"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_marginEnd="27dp" />

</RelativeLayout>