<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/find_busstop"
        android:textColor="#d80111ff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgAuthor"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img_avatar"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/author_image" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgAuthor"
        android:layout_margin="15dp"
        android:text="@string/copyright_by"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvNameAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblName"
        android:layout_toEndOf="@+id/lblName"
        android:text="@string/phan_van_hoai"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/lblTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblName"
        android:layout_margin="15dp"
        android:text="@string/telephone"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblTel"
        android:layout_toEndOf="@+id/lblName"
        android:text="@string/tel"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/lblMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTel"
        android:layout_margin="15dp"
        android:text="@string/email"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblMail"
        android:layout_toEndOf="@+id/lblName"
        android:text="@string/my_email"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/lblAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblMail"
        android:layout_margin="15dp"
        android:text="@string/address"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblAddress"
        android:layout_toEndOf="@+id/lblName"
        android:text="@string/dut"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_back"
        android:layout_marginTop="5dp"
        android:layout_margin="10dp"
        app:fabSize="normal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>